Fix Issue with Updating All Packages

--- a/Lab1/Ops/apache.yml
+++ b/Lab1/Ops/apache.yml
@@ -9,7 +9,7 @@
   tasks:
   - name: Update Packages
     ansible.builtin.yum:
-      name: *
+      name: '*'
       state: latest
   - name: Install Apache
     ansible.builtin.yum:
