Ignore Errors On Stop MySQL Server Task

--- a/Lab2/Ops/monitor_uninstall.yml
+++ b/Lab2/Ops/monitor_uninstall.yml
@@ -29,6 +29,7 @@
       name: mysqld
       enabled: no
       state: stopped
+      ignore_errors: yes
   - name: Uninstall Mysql
     ansible.builtin.yum:
       name: mysql
