--- a/Lab2/Ops/monitor_setup.yml
+++ b/Lab2/Ops/monitor_setup.yml
@@ -91,7 +91,7 @@
           #          state: started
           - name: open monitoring port
             ansible.posix.firewalld:
-                    service: zabbix-zerver
+                    service: zabbix-zerver-mysql
                     permanent: yes
                     state: enabled
           - name: restart apache2
