Use Port Instead of Service

--- a/Lab2/Ops/monitor_setup.yml
+++ b/Lab2/Ops/monitor_setup.yml
@@ -89,9 +89,14 @@
           #          name: zabbix-server
           #          enabled: yes
           #          state: started
-          - name: open monitoring port
+          - name: open monitoring port TCP
             ansible.posix.firewalld:
-                    service: zabbix-trapper
+                    port: 10051/TCP
+                    permanent: yes
+                    state: enabled
+          - name: open monitoring port UDP
+            ansible.posix.firewalld:
+                    port: 10051/UDP
                     permanent: yes
                     state: enabled
           - name: restart apache2
