--- a/Lab2/Ops/monitor_uninstall54.yml
+++ b/Lab2/Ops/monitor_uninstall54.yml
@@ -17,6 +17,9 @@
       name: zabbix-server-mysql
       state: absent
   - name: Uninstall Zabbix Web
+      name: zabbix-web
+      state: absent
+  - name: Uninstall Zabbix Web MySQL
     ansible.builtin.yum:
       name: zabbix-web-mysql
       state: absent
