Forgot to Specify Module

--- a/Lab2/Ops/monitor_uninstall54.yml
+++ b/Lab2/Ops/monitor_uninstall54.yml
@@ -17,6 +17,7 @@
       name: zabbix-server-mysql
       state: absent
   - name: Uninstall Zabbix Web
+    ansible.builtin.yum:
       name: zabbix-web
       state: absent
   - name: Uninstall Zabbix Web MySQL
