--- a/Lab2/Ops/monitor_setup54.yml
+++ b/Lab2/Ops/monitor_setup54.yml
@@ -134,3 +134,16 @@
             ansible.builtin.systemd:
                     name: firewalld
                     state: reloaded
+          - name: Add Zabbix Agent
+            local_action:
+                    module: community.zabbix.zabbix_host
+                    server_url: http://calWebMon/zabbix
+                    login_user: Admin
+                    login_password: zabbix
+                    host_name: calWebProd
+                    visible_name: calWebProd
+                    interfaces:
+                            - type: 1
+                            - main: 1
+                            - useip: 1
+                            - ip: 192.168.1.1
