--- a/Lab2/Ops/monitor_setup54.yml
+++ b/Lab2/Ops/monitor_setup54.yml
@@ -144,6 +144,6 @@
                     visible_name: calWebProd
                     interfaces:
                             - type: 1
-                            - main: 1
-                            - useip: 1
-                            - ip: 192.168.1.1
+                              main: 1
+                              useip: 1
+                              ip: 192.168.1.1
