Add Task to Install zabbix-api

--- a/Lab2/Ops/monitor_setup54.yml
+++ b/Lab2/Ops/monitor_setup54.yml
@@ -45,6 +45,9 @@
             ansible.builtin.yum:
                     name: zabbix-agent
                     state: latest
+          - name: Install zabbix-api
+            ansible.builtin.pip:
+                    name: zabbix-api
           - name: Ensure apache is updated
             ansible.builtin.yum:
                     name: httpd
