Improve Install zabbix-api Task

--- a/Lab2/Ops/monitor_setup54.yml
+++ b/Lab2/Ops/monitor_setup54.yml
@@ -48,6 +48,7 @@
           - name: Install zabbix-api
             ansible.builtin.pip:
                     name: zabbix-api
+                    state: latest
           - name: Ensure apache is updated
             ansible.builtin.yum:
                     name: httpd
