Add Host Group for Agent

--- a/Lab2/Ops/monitor_setup54.yml
+++ b/Lab2/Ops/monitor_setup54.yml
@@ -162,6 +162,8 @@
                     login_password: zabbix
                     host_name: calWebProd
                     visible_name: calWebProd
+                    host_groups:
+                            - Linux servers
                     interfaces:
                             - type: 1
                               main: 1
